<resources>
    <string name="app_name">CropRorateUndoSave</string>
    <string name="edit_image">edit_image</string>
    <string name="undo">Undo</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="selfie">Selfie</string>
    <string name="gallery">Gallery</string>
    <string name="select_an_image">Select an Image</string>
    <string name="edited_image">Edited Image</string>
</resources>